crates/know_now_gen_postgres/tests/snapshots/snapshots__postgres_ddl_multi_entity_snapshot.snap
---
source: crates/know_now_gen_postgres/tests/snapshots.rs
expression: sql
---
-- Generated by know-now.
-- Artifact ID: art_postgres_schema
-- Generator: know_now_gen_postgres
-- Generator version: [redacted]
-- Input hash: [redacted]
-- Manifest path: generated/manifest.json
-- Do not edit directly unless you intend to fork this artifact.

CREATE TABLE customer (
    id INTEGER NOT NULL,
    email TEXT NOT NULL,
    active BOOLEAN NOT NULL,
    PRIMARY KEY (email)
);

CREATE TABLE order_line (
    id INTEGER NOT NULL,
    customer_id INTEGER NOT NULL,
    amount NUMERIC NOT NULL,
    created_at TIMESTAMPTZ NOT NULL,
    PRIMARY KEY (id)
);
