crates/know_now_gen_postgres/tests/snapshots/snapshots__postgres_ddl_snapshot.snap
---
source: crates/know_now_gen_postgres/tests/snapshots.rs
expression: sql
---
-- Generated by know-now.
-- Artifact ID: art_postgres_schema
-- Generator: know_now_gen_postgres
-- Generator version: [redacted]
-- Input hash: [redacted]
-- Manifest path: generated/manifest.json
-- Do not edit directly unless you intend to fork this artifact.

CREATE TABLE customer (
    id INTEGER NOT NULL,
    email TEXT NOT NULL,
    active BOOLEAN NOT NULL,
    PRIMARY KEY (email)
);
